<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:gravity="center"
    >

    <TextView
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_contact"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"

    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_contact_name"
        android:hint="@string/enter_contact_name"
        android:inputType="textCapWords"
        android:textColor="#f12345"
     />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_contact_number"
        android:hint="@string/enter_mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:textColor="#098cea"

    />
<Spinner
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/id_contact_type"
    android:entries="@array/spinner_data">



</Spinner>
</LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_contact_email"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:textColor="#07edfd"

        />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_contact_save"
        android:text="@string/save_contact"
        android:textColor="#ec13de"
        android:background="#25f1f1"
        android:textSize="20sp"
       

        />

</LinearLayout>